--- a/package.json
+++ b/package.json
@@ -1,27 +1,5 @@
 {
-  "name": "basic-payment-system",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thy0602/basic-payment-system.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/thy0602/basic-payment-system/issues"
-  },
-  "homepage": "https://github.com/thy0602/basic-payment-system#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "node-sass": "^6.0.1"
   }
 }
