--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/thy0602/basic-payment-system#readme",
   "dependencies": {
+    "bootstrap-icons": "^1.7.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
