--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/thy0602/basic-payment-system#readme",
   "dependencies": {
-    "bootstrap-icons": "^1.7.2",
     "bcrypt": "^5.0.1",
+    "bootstrap-icons": "^1.7.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pg-promise": "^10.11.1",
